[package]
name = "jae"
version = "0.1.0"
edition = "2024"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
description = "Object tracking system"
repository = "https://github.com/0xd34d10cc/jae"
homepage = "https://github.com/0xd34d10cc/jae"
documentation = "https://docs.rs/jae"
readme = "README.md"
keywords = []
license = "MIT"

[dependencies]
